# mcp-runner

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  strace_output.txt
examples/: config.json  simple_client.rs  sse_config.json  sse_proxy.rs
src/: client.rs  error.rs  lib.rs
src/config/: mod.rs  parser.rs  validator.rs
src/proxy/: connection_handler.rs  error_helpers.rs  events.rs  http.rs  http_handlers.rs  mod.rs  server_manager.rs  sse_proxy.rs  types.rs
src/server/: lifecycle.rs  mod.rs  monitor.rs  process.rs
src/sse_proxy/: actix_error.rs  auth.rs  events.rs  handlers.rs  mod.rs  proxy.rs  types.rs
src/transport/: json_rpc.rs  mod.rs  stdio.rs
tests/: client_tests.rs  config_tests.rs  proxy.rs  server_tests.rs  signal_handling_tests.rs  sse_proxy.rs  stdio_transport_tests.rs  transport_tests.rs
tests/proxy/: connection_handler_tests.rs  error_helpers_tests.rs  events_tests.rs  http_handlers_tests.rs  http_tests.rs  server_manager_tests.rs  sse_proxy_tests.rs  types_tests.rs
tests/sse_proxy/: events_tests.rs  handlers_tests.rs  proxy_tests.rs  transport_tests.rs
