[package]
name = "mcp-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-process = "2.3.0"
async-trait = "0.1.88"
futures-lite = "2.6.0"
jsonrpc-core = "18.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_fs = "1.1.2"
mockall = "0.13.1"
tempfile = "3.19.1"
