[package]
name = "mcp-runner"
version = "0.1.0"
edition = "2024"
description = "A Rust library for running and interacting with Model Context Protocol (MCP) servers locally"
authors = ["Bill Antoniadis <bill.antoniadis@streamline.us>"]
license = "MIT"
repository = "https://github.com/Streamline-TS/mcp-runner"
documentation = "https://docs.rs/mcp-runner"
readme = "README.md"
keywords = ["mcp", "ai", "api", "server", "runner"]
categories = ["command-line-utilities", "asynchronous"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.98"
async-process = "2.3.0"
async-trait = "0.1.88"
futures-lite = "2.6.0"
jsonrpc-core = "18.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "time",
    "sync",
    "process"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_fs = "1.1.2"
mockall = "0.13.1"
tempfile = "3.19.1"
tracing-appender = "0.2"

# Optional dependencies for examples
[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt", "json"]

# Configure examples to exclude from publishing
[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "logging_setup"
path = "examples/logging_setup.rs"
